# euler

./: .gitignore  .rusty-hook.toml  Cargo.toml  bacon.toml  build.rs  justfile  readme.md
.github/workflows/: book.yml
book/: book.toml  readme.md
book/src/: SUMMARY.md
book/src/problems/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  _template.md
book/theme/: euler.css
euler/: Cargo.toml
euler/src/: lib.rs
notes/: p2.md  p6.md  p9.md
problems/: .gitignore  Cargo.toml  build.rs
problems/src/: lib.rs  p1.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p17.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs
runner/: Cargo.toml
runner/src/: all.rs  main.rs  new.rs  run.rs
src/: lib.rs  main.rs  problems.rs
src/prelude/: execute.rs  mod.rs
src/problems/: p1.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs
src/solutions/: mod.rs  p1.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs
