[package]
name = "euler"
publish = false
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
inventory = "0.3.20"
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.23.1"
