[workspace]
resolver = "3"
members = ["euler", "problems", "runner"]
default-members = ["runner"]

[workspace.package]
version = "0.0.0"
publish = false
edition = "2024"

[workspace.dependencies]
euler = { path = "euler" }
color-eyre = "0.6.5"
regex = "1.11.1"
scraper = "0.23.1"
inventory = "0.3.20"
clap = "4.5.39"
problems = { path = "problems" }
reqwest = "0.12.19"
owo-colors = "4.2.1"
phf = "0.11.3"
