[workspace]
resolver = "3"
members = ["euler", "problems", "runner"]
default-members = ["runner"]

[workspace.package]
version = "0.0.0"
publish = false
edition = "2024"

[workspace.dependencies]
euler = { path = "euler" }
color-eyre = "0.6.5"
regex = "1.11.1"
scraper = "0.24.0"
inventory = "0.3.20"
clap = "4.5.45"
problems = { path = "problems" }
reqwest = "0.12.23"
owo-colors = "4.2.2"
phf = "0.12.1"
cli-table = "0.5.0"
sha2 = "0.10.9"
