[package]
name = "runner"
version.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
euler.workspace = true
problems.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
scraper.workspace = true
owo-colors.workspace = true
phf = { workspace = true, features = ["macros"] }
cli-table.workspace = true
sha2.workspace = true
